# chisel-sv-blocks

./: .gitignore  README.md  build.mill  pyproject.toml  setup_env.sh
chipdev/src/: ChipDev.scala
chisel/: build.mill
chisel/chipdev/src/: ChipDev.scala
common/src/: common.scala
sv/: Makefile
sv/async_fifo/: Makefile
sv/async_fifo/src/: async_fifo.sv
sv/autovision-rtl/: prio_arbiter_lsb_to_msb.sv  prio_arbiter_msb_to_lsb.sv  reorder_buffer.sv  round_robin_arbiter.sv  sync_fifo.sv  test_blocks.py
sv/chipdev/: Makefile  basic_alu.sv  count_ones.sv  divide_by_evens.sv  edge_detector.sv  fibonacci.sv  fizzbuzz.sv  flip_flop_array.sv  full_adder.sv  gray_code_counter.sv  gray_to_binary.sv  multi_bit_fifo.sv  one_hot.sv  palindrome.sv  piso.sv  prog_sequence_detector.sv  reversing_bits.sv  ripple_carry_adder.sv  rounding_division.sv  second_largest.sv  sequence_detector.sv  simple_router.sv  sipo.sv  stop_watch_timer.sv  trailing_zeros.sv
sv/circular_buffer/src/: circular_buffer.sv
sv/prep/: calc_index.sv  clock_div3.sv  clock_gate.sv  factorial.sv  fibonnaci.sv  find_first_set.sv  fsm_detector.sv  golden_fib.py  handshake_sync.sv  median_calc.sv  msb_to_lsb_prio_arbiter.sv  nvidia_handshake.sv  register_controller.sv  reset_clkgate_ctrl.sv  sync_fifo.sv  toggle_sync.sv
sv/register_controller/src/: register_controller.sv
sv/riscv-harris-harris/: README.txt  test_blocks.py
sv/riscv-harris-harris/alu/: alu.sv
sv/rotate_left/: rotate_left.sv
sv/sync_fifo/: Makefile
sv/util/: b2g.sv  g2b.sv  synchronizer_ff.sv  synchronizer_toggle.sv  util.sv
(+6 files in other folders)
